Scanned through checkstyle